<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_20sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:src="@drawable/ic_app_logo" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/track_your_complaint"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/font_extra_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/current_complaint"
            android:textColor="@color/black"
            android:textSize="@dimen/font_title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvFrgTrackCurrentComplaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/pass_complaint"
            android:textColor="@color/black"
            android:textSize="@dimen/font_title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvFrgTrackPastComplaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>