<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_app_background"
    tools:context="com.om.swachatha.corporation.activity.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_180sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:src="@drawable/ic_app_logo" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingTop="@dimen/_180sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_mobile"
                android:visibility="gone"
                android:drawablePadding="@dimen/_5sdp"
                android:inputType="phone"
                android:text="@string/sign_in_phone_number" />
        </LinearLayout>

        <EditText
            android:id="@+id/etActSignInPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:hint="@string/sign_in_phone_number"
            android:textColorHint="@color/black"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:drawableLeft="@mipmap/ic_mobile"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/sign_in_phone_password" />
        </LinearLayout>

        <EditText
            android:id="@+id/etActSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_password"
            android:padding="@dimen/_10sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:hint="@string/sign_in_phone_password"
            android:textColorHint="@color/black"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnActSignInNext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColorHint="@color/black"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_in"
            android:textColor="@color/buttonTextColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSignInActForgotPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sign_in_forgot_pass"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvSignInActForgotSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sign_in_new_here"
                android:textColor="#000000" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
