<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="#987654"
            android:textColor="@color/fontColor2"
            android:textSize="@dimen/font_extra_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/grey_border"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_30sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/complaint_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tvWardSuperCompDetailsFrgCompNumDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="19/12/2017"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/complaint_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tvWardSuperCompDetailsFrgCompTitleDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="19/12/2017"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tvWardSuperCompDetailsFrgDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="25/12/2017"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_margin="@dimen/_10sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tvWardSuperCompDetailsFrgName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Chaya Nagar"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/ward"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tvWardSuperCompDetailsFrgWard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Gayatri park"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/society"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tvWardSuperCompDetailsFrgCompSociety"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Chandraprabha"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/flat"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tvWardSuperCompDetailsFrgFlat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="B-42"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/mobile_no"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tvWardSuperCompDetailsFrgMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5595949959"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btnWardSuperCompDetailsFrgNext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_in_next"
            android:textColor="#af9d67" />
    </LinearLayout>
</RelativeLayout>